--- a/index.html
+++ b/index.html
@@ -23,100 +23,93 @@
     <div class="content">
       <div class="tabs">
         <div class="tab-menu">
-          <div class="tab-link active">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="none"
-            >
-              <path
-                d="M6.2938 18.7399H19.1987C20.8259 18.7399 21.6696 17.9037 21.6696 16.2991V7.12331C21.6696 5.51868 20.8259 4.68246 19.1987 4.68246H6.2938C4.66657 4.68246 3.82282 5.51115 3.82282 7.12331V16.2991C3.82282 17.9037 4.66657 18.7399 6.2938 18.7399ZM6.38421 17.2634C5.68359 17.2634 5.29939 16.9018 5.29939 16.171V7.25138C5.29939 6.52063 5.68359 6.15149 6.38421 6.15149H19.1083C19.8013 6.15149 20.1931 6.52063 20.1931 7.25138V16.171C20.1931 16.9018 19.8013 17.2634 19.1083 17.2634H6.38421ZM7.78543 9.13475H8.64425C8.96066 9.13475 9.23186 8.87108 9.23186 8.54714C9.23186 8.2232 8.96066 7.95953 8.64425 7.95953H7.78543C7.46149 7.95953 7.19782 8.2232 7.19782 8.54714C7.19782 8.87108 7.46149 9.13475 7.78543 9.13475ZM10.7235 9.03682H17.7899C18.0611 9.03682 18.2796 8.82588 18.2796 8.54714C18.2796 8.27594 18.0611 8.065 17.7899 8.065H10.7235C10.4448 8.065 10.2338 8.27594 10.2338 8.54714C10.2338 8.82588 10.4448 9.03682 10.7235 9.03682ZM7.78543 11.6057H8.64425C8.96066 11.6057 9.23186 11.3496 9.23186 11.0257C9.23186 10.7017 8.96819 10.438 8.64425 10.438H7.78543C7.46149 10.438 7.19782 10.7017 7.19782 11.0257C7.19782 11.3496 7.46149 11.6057 7.78543 11.6057ZM10.7235 11.5153H17.7899C18.0611 11.5153 18.2796 11.3044 18.2796 11.0257C18.2796 10.7469 18.0611 10.5284 17.7899 10.5284H10.7235C10.4523 10.5284 10.2338 10.7469 10.2338 11.0257C10.2338 11.2969 10.4448 11.5153 10.7235 11.5153Z"
-                fill="#394452"
-              />
-            </svg>
-            <p>Liste</p>
-          </div>
-          <div class="tab-link">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="none"
-            >
-              <path
-                d="M4.00837 18.2201C4.00837 18.6119 4.26451 18.868 4.65625 18.868H19.7458C20.1526 18.868 20.4916 18.5516 20.4916 18.1297C20.4916 17.7079 20.1526 17.3915 19.7458 17.3915H5.69587C5.53767 17.3915 5.48493 17.3387 5.48493 17.1805V13.0823L8.67913 11.2291C8.93527 11.4701 9.27428 11.6208 9.65848 11.6208C9.98242 11.6208 10.2913 11.5078 10.5324 11.3195L11.9487 12.5248C11.8959 12.6755 11.8658 12.8412 11.8658 13.007C11.8658 13.8055 12.5061 14.4459 13.2972 14.4459C14.0882 14.4459 14.736 13.8055 14.736 13.007C14.736 12.9467 14.7285 12.8789 14.721 12.8186L18.1713 10.7545C18.3973 10.9127 18.6761 11.0031 18.9699 11.0031C19.7609 11.0031 20.4088 10.3552 20.4088 9.56417C20.4088 8.77315 19.7609 8.12527 18.9699 8.12527C18.1789 8.12527 17.531 8.77315 17.531 9.56417C17.531 9.66211 17.546 9.76004 17.5611 9.85044L14.1786 11.8769C13.9375 11.6886 13.6286 11.5756 13.2972 11.5756C13.0636 11.5756 12.8376 11.6283 12.6342 11.7338L11.0748 10.4079C11.0823 10.3326 11.0898 10.2573 11.0898 10.1819C11.0898 9.3909 10.4495 8.74302 9.65848 8.74302C8.85993 8.74302 8.21959 9.3909 8.21959 10.1819C8.21959 10.2045 8.21959 10.2271 8.21959 10.2497L5.48493 11.8317V5.33789C5.48493 4.92354 5.16853 4.59207 4.74665 4.59207C4.32478 4.59207 4.00837 4.92354 4.00837 5.33789V18.2201Z"
-                fill="#394452"
-              />
-            </svg>
-            <p>Statistiques</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="tab-content">
-        <!-- Listes -->
-        <div class="tab-pane" id="content1">
-          <section class="section">
-            <h5>Liste des données de vente</h5>
-            <div class="list">
-              <!-- Les données de vente seront affichées ici -->
+          <div class="tab-menu-container">
+            <div class="tab-link active">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M6.2938 18.7399H19.1987C20.8259 18.7399 21.6696 17.9037 21.6696 16.2991V7.12331C21.6696 5.51868 20.8259 4.68246 19.1987 4.68246H6.2938C4.66657 4.68246 3.82282 5.51115 3.82282 7.12331V16.2991C3.82282 17.9037 4.66657 18.7399 6.2938 18.7399ZM6.38421 17.2634C5.68359 17.2634 5.29939 16.9018 5.29939 16.171V7.25138C5.29939 6.52063 5.68359 6.15149 6.38421 6.15149H19.1083C19.8013 6.15149 20.1931 6.52063 20.1931 7.25138V16.171C20.1931 16.9018 19.8013 17.2634 19.1083 17.2634H6.38421ZM7.78543 9.13475H8.64425C8.96066 9.13475 9.23186 8.87108 9.23186 8.54714C9.23186 8.2232 8.96066 7.95953 8.64425 7.95953H7.78543C7.46149 7.95953 7.19782 8.2232 7.19782 8.54714C7.19782 8.87108 7.46149 9.13475 7.78543 9.13475ZM10.7235 9.03682H17.7899C18.0611 9.03682 18.2796 8.82588 18.2796 8.54714C18.2796 8.27594 18.0611 8.065 17.7899 8.065H10.7235C10.4448 8.065 10.2338 8.27594 10.2338 8.54714C10.2338 8.82588 10.4448 9.03682 10.7235 9.03682ZM7.78543 11.6057H8.64425C8.96066 11.6057 9.23186 11.3496 9.23186 11.0257C9.23186 10.7017 8.96819 10.438 8.64425 10.438H7.78543C7.46149 10.438 7.19782 10.7017 7.19782 11.0257C7.19782 11.3496 7.46149 11.6057 7.78543 11.6057ZM10.7235 11.5153H17.7899C18.0611 11.5153 18.2796 11.3044 18.2796 11.0257C18.2796 10.7469 18.0611 10.5284 17.7899 10.5284H10.7235C10.4523 10.5284 10.2338 10.7469 10.2338 11.0257C10.2338 11.2969 10.4448 11.5153 10.7235 11.5153Z"
+                  fill="#394452"
+                />
+              </svg>
+              <p>Liste</p>
             </div>
-          </section>
-          <div class="pagination-container">
-            <div class="pagination">
-              <button id="previousPageButton">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                  <path d="M5.9633 9.75307C5.9633 9.9728 6.04492 10.1611 6.2207 10.3244L11.1049 15.1081C11.243 15.2462 11.4188 15.3216 11.626 15.3216C12.0403 15.3216 12.373 14.9951 12.373 14.5745C12.373 14.3673 12.2851 14.1853 12.147 14.0409L7.74623 9.75307L12.147 5.46526C12.2851 5.32087 12.373 5.13253 12.373 4.93164C12.373 4.51102 12.0403 4.18457 11.626 4.18457C11.4188 4.18457 11.243 4.25991 11.1049 4.39802L6.2207 9.1755C6.04492 9.34501 5.9633 9.53334 5.9633 9.75307Z" fill="white"/>
-                </svg>
-                Précédent
-              </button>
-              <span id="currentPageIndicator"></span>
-              <button id="nextPageButton">
-                Suivant
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                  <path d="M14.0367 9.75307C14.0304 9.53334 13.9488 9.34501 13.7793 9.1755L8.89509 4.39802C8.7507 4.25991 8.58119 4.18457 8.37402 4.18457C7.9534 4.18457 7.62695 4.51102 7.62695 4.93164C7.62695 5.13253 7.70857 5.32087 7.85296 5.46526L12.2475 9.75307L7.85296 14.0409C7.70857 14.1853 7.62695 14.3673 7.62695 14.5745C7.62695 14.9951 7.9534 15.3216 8.37402 15.3216C8.57492 15.3216 8.7507 15.2462 8.89509 15.1081L13.7793 10.3244C13.9551 10.1611 14.0367 9.9728 14.0367 9.75307Z" fill="white"/>
-                </svg>
-              </button>
+            <div class="tab-link">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M4.00837 18.2201C4.00837 18.6119 4.26451 18.868 4.65625 18.868H19.7458C20.1526 18.868 20.4916 18.5516 20.4916 18.1297C20.4916 17.7079 20.1526 17.3915 19.7458 17.3915H5.69587C5.53767 17.3915 5.48493 17.3387 5.48493 17.1805V13.0823L8.67913 11.2291C8.93527 11.4701 9.27428 11.6208 9.65848 11.6208C9.98242 11.6208 10.2913 11.5078 10.5324 11.3195L11.9487 12.5248C11.8959 12.6755 11.8658 12.8412 11.8658 13.007C11.8658 13.8055 12.5061 14.4459 13.2972 14.4459C14.0882 14.4459 14.736 13.8055 14.736 13.007C14.736 12.9467 14.7285 12.8789 14.721 12.8186L18.1713 10.7545C18.3973 10.9127 18.6761 11.0031 18.9699 11.0031C19.7609 11.0031 20.4088 10.3552 20.4088 9.56417C20.4088 8.77315 19.7609 8.12527 18.9699 8.12527C18.1789 8.12527 17.531 8.77315 17.531 9.56417C17.531 9.66211 17.546 9.76004 17.5611 9.85044L14.1786 11.8769C13.9375 11.6886 13.6286 11.5756 13.2972 11.5756C13.0636 11.5756 12.8376 11.6283 12.6342 11.7338L11.0748 10.4079C11.0823 10.3326 11.0898 10.2573 11.0898 10.1819C11.0898 9.3909 10.4495 8.74302 9.65848 8.74302C8.85993 8.74302 8.21959 9.3909 8.21959 10.1819C8.21959 10.2045 8.21959 10.2271 8.21959 10.2497L5.48493 11.8317V5.33789C5.48493 4.92354 5.16853 4.59207 4.74665 4.59207C4.32478 4.59207 4.00837 4.92354 4.00837 5.33789V18.2201Z"
+                  fill="#394452"
+                />
+              </svg>
+              <p>Statistiques</p>
             </div>
           </div>
         </div>
-        <!-- Stats -->
-        <div class="tab-pane" id="content2">
-          <div class="double-chart-container">
-            <div class="chart-container">
-              <h5>Répartition des ventes par canal de vente.</h5>
-              <canvas id="ventesParCanal" width="400" height="400"></canvas>
-            </div>
-            <div class="chart-container">
-              <h5>Répartition des ventes par type d'article.</h5>
-              <canvas id="ventesParArticle" width="400" height="400"></canvas>
+        <div class="tab-content">
+          <!-- Listes -->
+          <div class="tab-pane" id="content1">
+            <section class="section">
+              <h5>Liste des données de vente</h5>
+              <div class="list">
+                <!-- Les données de vente seront affichées ici -->
+              </div>
+            </section>
+            <div class="pagination-container">
+              <div class="pagination">
+                <button id="previousPageButton">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M5.9633 9.75307C5.9633 9.9728 6.04492 10.1611 6.2207 10.3244L11.1049 15.1081C11.243 15.2462 11.4188 15.3216 11.626 15.3216C12.0403 15.3216 12.373 14.9951 12.373 14.5745C12.373 14.3673 12.2851 14.1853 12.147 14.0409L7.74623 9.75307L12.147 5.46526C12.2851 5.32087 12.373 5.13253 12.373 4.93164C12.373 4.51102 12.0403 4.18457 11.626 4.18457C11.4188 4.18457 11.243 4.25991 11.1049 4.39802L6.2207 9.1755C6.04492 9.34501 5.9633 9.53334 5.9633 9.75307Z" fill="white"/>
+                  </svg>
+                  Précédent
+                </button>
+                <span id="currentPageIndicator"></span>
+                <button id="nextPageButton">
+                  Suivant
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M14.0367 9.75307C14.0304 9.53334 13.9488 9.34501 13.7793 9.1755L8.89509 4.39802C8.7507 4.25991 8.58119 4.18457 8.37402 4.18457C7.9534 4.18457 7.62695 4.51102 7.62695 4.93164C7.62695 5.13253 7.70857 5.32087 7.85296 5.46526L12.2475 9.75307L7.85296 14.0409C7.70857 14.1853 7.62695 14.3673 7.62695 14.5745C7.62695 14.9951 7.9534 15.3216 8.37402 15.3216C8.57492 15.3216 8.7507 15.2462 8.89509 15.1081L13.7793 10.3244C13.9551 10.1611 14.0367 9.9728 14.0367 9.75307Z" fill="white"/>
+                  </svg>
+                </button>
+              </div>
             </div>
           </div>
+          <!-- Stats -->
+          <div class="tab-pane" id="content2">
+            <div class="double-chart-container">
+              <div class="chart-container">
+                <h5>Répartition des ventes par canal de vente.</h5>
+                <canvas id="ventesParCanal" width="400" height="400"></canvas>
+              </div>
+              <div class="chart-container">
+                <h5>Répartition des ventes par type d'article.</h5>
+                <canvas id="ventesParArticle" width="400" height="400"></canvas>
+              </div>
+            </div>
 
-          <div class="chart-container">
-            <h5>Les ventes par région</h5>
-            <canvas id="ventesParRegion" width="400" height="400"></canvas>
+            <div class="double-chart-container">
+              <div class="chart-container">
+                <h5>Les ventes par région</h5>
+                <canvas id="ventesParRegion" width="400" height="400"></canvas>
+              </div>
+              <div class="chart-container">
+                <h5>Chiffre d'affaire par région</h5>
+                <canvas id="chiffresAffairesParRegionStacked" width="400" height="400"></canvas>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Modals -->
-    <div id="venteModal" class="modal">
-      <div id="modalContent" class="modal-content">
-        <!-- Les details de la vente -->
       </div>
     </div>
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/formatDate.js"></script>
-    <script src="./assets/js/dataHandler.js"></script>
-    <script src="./assets/js/salesDisplay.js"></script>
-    <script src="./assets/js/tabs.js"></script>
-    <script src="./assets/js/modal.js"></script>
-    <script src="./assets/js/chartParRegion.js"></script>
-    <script src="./assets/js/chartParCanal.js"></script>
-    <script src="./assets/js/chartParArticle.js"></script>
+    <!-- Custom Script -->
+    <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
