--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Données de Vente</title>
+    <link rel="icon" type="image/x-icon" href="./assets//img/cube.fill.png">
+    <title>Sales Insights</title>
   </head>
   <body>
     <!-- Header -->
