--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/venteCard.css" />
+
+    <!-- Page Icon -->
     <link rel="icon" type="image/x-icon" href="./assets//img/cube.fill.png">
     <title>Sales Insights</title>
   </head>
@@ -60,6 +64,14 @@
               <h5>Liste des données de vente</h5>
               <div class="list">
                 <!-- Les données de vente seront affichées ici -->
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
+                <vente-card-skeleton></vente-card-skeleton>
               </div>
             </section>
             <div class="pagination-container">
